--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "copy-webpack-plugin": "^13.0.0"
   }
 }
